<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:textSize="19sp"
        android:text="@string/new_playlist"/>

    <EditText
        android:id="@+id/playlist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        style="@style/editTextStyle"
        android:textSize="16sp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:paddingStart="6dp"
        android:paddingEnd="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/autocomplete_back"
        android:hint="@string/hint_playlist"/>

    <TextView
        android:id="@+id/cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/playlist_name"
        android:layout_alignParentStart="true"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:textColor="#aa4444"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/cancel"/>

    <TextView
        android:id="@+id/aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/playlist_name"
        android:layout_alignParentEnd="true"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:textAllCaps="false"
        android:textColor="#333"
        android:textSize="18sp"
        android:text="@string/crear_add_playlist"/>

</RelativeLayout>