<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="etsiitdevs.com.palioblanco.LogInActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0.0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/language_selector"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:popupBackground="@drawable/spinner_back"
                android:dropDownVerticalOffset="3dp"
                android:spinnerMode="dropdown" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:src="@drawable/drop" />

        </RelativeLayout>


        <TextView
            android:textSize="66sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:singleLine="true"
            android:shadowColor="#000"
            android:shadowDx="0.0"
            android:shadowDy="1.0"
            android:gravity="center"
            android:shadowRadius="0.1"
            android:layout_below="@id/language_selector"
            android:layout_centerHorizontal="true"
            android:paddingTop="30dp"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/hint_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:layout_marginTop="0dp"
            android:text="@string/hint_city"/>

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            style="@style/editTextStyle"
            android:textSize="20sp"
            android:layout_below="@id/hint_city"
            android:id="@+id/autocomplete"
            android:hint="@string/hint_auto_complete_city"
            android:background="@drawable/autocomplete_back"
            android:paddingStart="10dp"
            android:popupBackground="@drawable/spinner_back"
            android:dropDownVerticalOffset="3dp"
            android:ems="10"
            android:layout_marginStart="60dp"/>



        <Button
            android:id="@+id/logup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="80dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:background="@drawable/facebook_button_back"
            android:layout_below="@id/autocomplete"
            android:text="@string/logup_button"
            android:textColor="#fff"
            android:drawableLeft="@drawable/com_facebook_button_icon"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:layout_marginTop="30dp" />


        <LinearLayout
            android:id="@+id/separator"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_below="@id/logup_button"
            android:orientation="horizontal">

            <View
                android:layout_width="0.0dp"
                android:layout_weight="1"
                android:layout_height="1dp"
                android:background="#aaa"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="6dp"
                android:layout_marginTop="9dp"/>

            <TextView
                android:layout_width="0.0dp"
                android:layout_weight="0.1"
                android:layout_height="16dp"
                android:gravity="center"
                android:text="@string/or"
                android:textSize="14sp"
                android:textColor="#aaa"/>

            <View
                android:layout_width="0.0dp"
                android:layout_weight="1"
                android:layout_height="1dp"
                android:background="#aaa"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="9dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="80dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:background="@drawable/login_button_back"
            android:layout_below="@id/separator"
            android:textColor="#fff"
            android:text="@string/login_button"
            android:layout_marginTop="12dp" />

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0.0dp"
        android:layout_weight="0.4">
        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:id="@+id/layoutDots"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal">
        </LinearLayout>

    </RelativeLayout>







</LinearLayout>
